Fix bugs on ios and android phones

--- a/header.css
+++ b/header.css
@@ -318,7 +318,6 @@ body {
 
     .search-label {
         display: none;
-        scroll-margin-top: 500px;
     }
 }
 
